--- a/src/components/category-preview/category-preview.styles.scss
+++ b/src/components/category-preview/category-preview.styles.scss
@@ -15,3 +15,10 @@
     column-gap: 20px;
   }
 }
+
+.shop-title-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
